Fixing spacing

--- a/styles/achievement-section.css
+++ b/styles/achievement-section.css
@@ -122,7 +122,7 @@
         padding-top: 2%;
         padding-right: 1%;
         padding-bottom: 8%;
-        padding-left: 1%;
+        padding-left: 0.2%;
     }
     
     
@@ -155,14 +155,13 @@
  
     #radio-options{
         text-align: left;
-        margin-left: 0%;
+        margin-left: 18%;
     
     }
     
     #radio-options input{
-        margin: auto;
         padding: 0;
-        text-align: center;
+        text-align: left;
     
     }
     
