--- a/styles/whatwedo-section.css
+++ b/styles/whatwedo-section.css
@@ -4,7 +4,7 @@
 
 
 #whatwedo-title{
-    padding: 10% 5%;
+    padding: 10% 2%;
     display: flex;
 }
 #whatwedo-title h3{
